Speed up transition speed, fix text alignment

--- a/index/style.css
+++ b/index/style.css
@@ -161,10 +161,11 @@ a {
 }
 
 .card-collapsible-content {
+    text-align: justify;
     padding: inherit;
     max-height: 0px;
     overflow: hidden;
-    transition: 5s;
+    transition: 3s;
     transition-timing-function: cubic-bezier(0.07, 1.06, 0.58, 1);
 }
 
